--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
           POSTGRES_DB: bank_bhutan
+        
+        ports:
+          - 5432:5432
+          
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
