--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+ENVIROMENT=development
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/bank_bhutan?sslmode=disable
 HTTP_SERVER_ADDRESS=0.0.0.0:8000
